
- ODBC:
  . Bug #68964 (Allowed memory size exhausted with odbc_exec). (Anatol)

- OpenSSL:
  . Fix bug #61285, #68329, #68046, #41631: encrypted streams don't observe
    socket timeouts (Brad Broerman)

- pgsql:
  . Fixed bug #68638 (pg_update() fails to store infinite values).
    (william dot welter at 4linux dot com dot br, Laruence)

- CGI:
  . Fixed bug #69015 (php-cgi's getopt does not see $argv). (Laruence)

?? ??? 2015, PHP 5.5.22

- Core:
  . Removed support for multi-line headers, as the are deprecated by RFC 7230.
    (Stas)
  . Fixed bug #68986 (pointer returned by php_stream_fopen_temporary_file
    not validated in memory.c). (nayana at ddproperty dot com)
  . Fixed bug #67068 (getClosure returns somethings that's not a closure). 
    (Danack at basereality dot com)
  . Fixed bug #68925 (Mitigation for CVE-2015-0235 – GHOST: glibc gethostbyname
    buffer overflow). (Stas)

- Date:
  . Fixed bug #45081 (strtotime incorrectly interprets SGT time zone). (Derick)

- Dba:
  . Fixed bug #68711 (useless comparisons). (bugreports at internot dot info)

- Fileinfo:
  . Fixed bug #68827 (Double free with disabled ZMM). (Joshua Rogers)

- FPM:
  . Fixed bug #66479 (Wrong response to FCGI_GET_VALUES). (Frank Stolle)
  . Fixed bug #68571 (core dump when webserver close the socket).
    (redfoxli069 at gmail dot com, Laruence)

- Libxml:
  . Fixed bug #64938 (libxml_disable_entity_loader setting is shared
    between threads). (Martin Jansen)

- PDO_mysql:
  . Fixed bug #68750 (PDOMysql with mysqlnd does not allow the usage of
    named pipes). (steffenb198 at aol dot com)

- Phar:
  . Fixed bug #68901 (use after free). (bugreports at internot dot info)

- Pgsql:
  . Fixed Bug #65199 'pg_copy_from() modifies input array variable). (Yasuo)

- Sqlite3:
  . Fixed bug #68260 (SQLite3Result::fetchArray declares wrong 
    required_num_args). (Julien)

- Mysqli:
  . Fixed bug #68114 (linker error on some OS X machines with fixed