@@ -400,12 +400,13 @@ PHP_FUNCTION(readline_read_history)
 		return;
 	}
 
-	if (php_check_open_basedir(arg TSRMLS_CC)) {
+	if (arg && php_check_open_basedir(arg TSRMLS_CC)) {
 		RETURN_FALSE;
 	}
 
 	/* XXX from & to NYI */
 	if (read_history(arg)) {
+		/* If filename is NULL, then read from `~/.history' */
 		RETURN_FALSE;
 	} else {
 		RETURN_TRUE;
@@ -424,7 +425,7 @@ PHP_FUNCTION(readline_write_history)
 		return;
 	}
 
-	if (php_check_open_basedir(arg TSRMLS_CC)) {
+	if (arg && php_check_open_basedir(arg TSRMLS_CC)) {
 		RETURN_FALSE;
 	}
 
